tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr85582_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr85582-1.c" (c, x86_64-unknown-linux-gnu)
global d : s32i = 2 [external, default, align 4, dso_local]
global c : s64i = 1 [external, default, align 8, dso_local]
global e : s32i = 0 [external, default, align 4, dso_local]
global a : s32i = 0 [external, default, align 4, dso_local]
global b : s32i = 0 [external, default, align 4, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "g", align 4
    %2 = alloca s32i, "i", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 6 : s32i
    store %4, %1, align 4
    br ^bb1
    ^bb1():
        label L1:
        %5 = get_global @d : s32i*
        %6 = load %5 : s32i, align 4
        %7 = get_global @e : s32i*
        store %6, %7, align 4
        scope {
            %37 = get_global @a : s32i*
            %38 = load %37 : s32i, align 4
            %39 = cast(int_to_bool) %38 : bool
            if %39 {
                goto L1
            }
            yield
        }
        %8 = load %1 : s32i, align 4
        %9 = dec %8 : s32i [nsw]
        store %9, %1, align 4
        %10 = get_global @c : s64i*
        %11 = load %10 : s64i, align 8
        %12 = get_global @e : s32i*
        %13 = load %12 : s32i, align 4
        %14 = not %13 : s32i
        %15 = load %1 : s32i, align 4
        %16 = not %15 : s32i
        %17 = or %14, %16 : s32i
        %18 = not %17 : s32i
        %19 = shift right %11, %18 : s64i
        %20 = cast(integral) %19 : s32i
        store %20, %2, align 4
        br ^bb2
    ^bb2():
        label L2:
        %21 = get_global @b : s32i*
        %22 = load %21 : s32i, align 4
        %23 = cast(integral) %22 : s64i
        %24 = get_global @c : s64i*
        %25 = load %24 : s64i, align 8
        %26 = rem %23, %25 : s64i
        %27 = load %2 : s32i, align 4
        %28 = cast(integral) %27 : s64i
        %29 = mul %26, %28 : s64i [nsw]
        %30 = get_global @c : s64i*
        store %29, %30, align 8
        scope {
            %33 = get_global @e : s32i*
            %34 = load %33 : s32i, align 4
            %35 = cast(int_to_bool) %34 : bool
            %36 = not %35 : bool
            if %36 {
                goto L2
            }
            yield
        }
        %31 = const 0 : s32i
        store %31, %0
        %32 = load %0 : s32i
        return %32
}
