tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr85582_3.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr85582-3.c" (c, x86_64-unknown-linux-gnu)
fn f1(%arg4: u128i, %arg5: s32i) -> u128i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: u128i, %arg5: s32i):
        %209 = alloca u128i, "x", align 16
        %210 = alloca s32i, "y", align 4
        %211 = alloca u128i, "__retval", align 16
        store %arg4, %209
        store %arg5, %210
        %212 = load %209 : u128i, align 16
        %213 = load %210 : s32i, align 4
        %214 = const -2 : s32i
        %215 = and %213, %214 : s32i
        %216 = shift left %212, %215 : u128i
        store %216, %211
        %217 = load %211 : u128i
        return %217
}
fn f2(%arg2: s128i, %arg3: s32i) -> s128i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s128i, %arg3: s32i):
        %200 = alloca s128i, "x", align 16
        %201 = alloca s32i, "y", align 4
        %202 = alloca s128i, "__retval", align 16
        store %arg2, %200
        store %arg3, %201
        %203 = load %200 : s128i, align 16
        %204 = load %201 : s32i, align 4
        %205 = const -2 : s32i
        %206 = and %204, %205 : s32i
        %207 = shift right %203, %206 : s128i
        store %207, %202
        %208 = load %202 : s128i
        return %208
}
fn f3(%arg0: u128i, %arg1: s32i) -> u128i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u128i, %arg1: s32i):
        %191 = alloca u128i, "x", align 16
        %192 = alloca s32i, "y", align 4
        %193 = alloca u128i, "__retval", align 16
        store %arg0, %191
        store %arg1, %192
        %194 = load %191 : u128i, align 16
        %195 = load %192 : s32i, align 4
        %196 = const -2 : s32i
        %197 = and %195, %196 : s32i
        %198 = shift right %194, %197 : u128i
        store %198, %193
        %199 = load %193 : u128i
        return %199
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u128i, "a", align 16
    %2 = alloca s128i, "b", align 16
    %3 = alloca s128i, "c", align 16
    %4 = alloca u128i, "d", align 16
    %5 = const 0 : s32i
    store %5, %0
    %6 = const 1 : u128i
    %7 = const 16 : u64i
    %8 = const 8 : u64i
    %9 = mul %7, %8 : u64i
    %10 = const 7 : u64i
    %11 = sub %9, %10 : u64i
    %12 = shift left %6, %11 : u128i
    store %12, %1, align 16
    scope {
        %180 = load %1 : u128i, align 16
        %181 = const 5 : s32i
        %182 = call @f1(%180, %181) : u128i [all]
        %183 = const 1 : u128i
        %184 = const 16 : u64i
        %185 = const 8 : u64i
        %186 = mul %184, %185 : u64i
        %187 = const 3 : u64i
        %188 = sub %186, %187 : u64i
        %189 = shift left %183, %188 : u128i
        %190 = cmp ne %182, %189 : bool
        if %190 {
            call @abort() [all]
            yield
        }
        yield
    }
    %13 = const 257 : u128i
    %14 = const 16 : u64i
    %15 = const 8 : u64i
    %16 = mul %14, %15 : u64i
    %17 = const 2 : u64i
    %18 = div %16, %17 : u64i
    %19 = const 7 : u64i
    %20 = sub %18, %19 : u64i
    %21 = shift left %13, %20 : u128i
    %22 = cast(integral) %21 : s128i
    store %22, %2, align 16
    scope {
        %163 = load %2 : s128i, align 16
        %164 = cast(integral) %163 : u128i
        %165 = const 16 : u64i
        %166 = const 8 : u64i
        %167 = mul %165, %166 : u64i
        %168 = const 2 : u64i
        %169 = div %167, %168 : u64i
        %170 = cast(integral) %169 : s32i
        %171 = call @f1(%164, %170) : u128i [all]
        %172 = const 257 : u128i
        %173 = const 16 : u64i
        %174 = const 8 : u64i
        %175 = mul %173, %174 : u64i
        %176 = const 7 : u64i
        %177 = sub %175, %176 : u64i
        %178 = shift left %172, %177 : u128i
        %179 = cmp ne %171, %178 : bool
        if %179 {
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %144 = load %2 : s128i, align 16
        %145 = cast(integral) %144 : u128i
        %146 = const 16 : u64i
        %147 = const 8 : u64i
        %148 = mul %146, %147 : u64i
        %149 = const 2 : u64i
        %150 = div %148, %149 : u64i
        %151 = const 2 : u64i
        %152 = add %150, %151 : u64i
        %153 = cast(integral) %152 : s32i
        %154 = call @f1(%145, %153) : u128i [all]
        %155 = const 257 : u128i
        %156 = const 16 : u64i
        %157 = const 8 : u64i
        %158 = mul %156, %157 : u64i
        %159 = const 5 : u64i
        %160 = sub %158, %159 : u64i
        %161 = shift left %155, %160 : u128i
        %162 = cmp ne %154, %161 : bool
        if %162 {
            call @abort() [all]
            yield
        }
        yield
    }
    %23 = const 1 : u128i
    %24 = const 16 : u64i
    %25 = const 8 : u64i
    %26 = mul %24, %25 : u64i
    %27 = const 1 : u64i
    %28 = sub %26, %27 : u64i
    %29 = shift left %23, %28 : u128i
    %30 = cast(integral) %29 : s128i
    store %30, %3, align 16
    scope {
        %132 = load %3 : s128i, align 16
        %133 = const 5 : s32i
        %134 = call @f2(%132, %133) : s128i [all]
        %135 = cast(integral) %134 : u128i
        %136 = const 31 : u128i
        %137 = const 16 : u64i
        %138 = const 8 : u64i
        %139 = mul %137, %138 : u64i
        %140 = const 5 : u64i
        %141 = sub %139, %140 : u64i
        %142 = shift left %136, %141 : u128i
        %143 = cmp ne %135, %142 : bool
        if %143 {
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %113 = load %3 : s128i, align 16
        %114 = const 16 : u64i
        %115 = const 8 : u64i
        %116 = mul %114, %115 : u64i
        %117 = const 2 : u64i
        %118 = div %116, %117 : u64i
        %119 = cast(integral) %118 : s32i
        %120 = call @f2(%113, %119) : s128i [all]
        %121 = cast(integral) %120 : u128i
        %122 = const 340282366920938463463374607431768211455 : u128i
        %123 = const 16 : u64i
        %124 = const 8 : u64i
        %125 = mul %123, %124 : u64i
        %126 = const 2 : u64i
        %127 = div %125, %126 : u64i
        %128 = const 1 : u64i
        %129 = sub %127, %128 : u64i
        %130 = shift left %122, %129 : u128i
        %131 = cmp ne %121, %130 : bool
        if %131 {
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %92 = load %3 : s128i, align 16
        %93 = const 16 : u64i
        %94 = const 8 : u64i
        %95 = mul %93, %94 : u64i
        %96 = const 2 : u64i
        %97 = div %95, %96 : u64i
        %98 = const 2 : u64i
        %99 = add %97, %98 : u64i
        %100 = cast(integral) %99 : s32i
        %101 = call @f2(%92, %100) : s128i [all]
        %102 = cast(integral) %101 : u128i
        %103 = const 340282366920938463463374607431768211455 : u128i
        %104 = const 16 : u64i
        %105 = const 8 : u64i
        %106 = mul %104, %105 : u64i
        %107 = const 2 : u64i
        %108 = div %106, %107 : u64i
        %109 = const 3 : u64i
        %110 = sub %108, %109 : u64i
        %111 = shift left %103, %110 : u128i
        %112 = cmp ne %102, %111 : bool
        if %112 {
            call @abort() [all]
            yield
        }
        yield
    }
    %31 = const 1 : u128i
    %32 = const 16 : u64i
    %33 = const 8 : u64i
    %34 = mul %32, %33 : u64i
    %35 = const 1 : u64i
    %36 = sub %34, %35 : u64i
    %37 = shift left %31, %36 : u128i
    store %37, %4, align 16
    scope {
        %80 = load %3 : s128i, align 16
        %81 = cast(integral) %80 : u128i
        %82 = const 5 : s32i
        %83 = call @f3(%81, %82) : u128i [all]
        %84 = const 1 : u128i
        %85 = const 16 : u64i
        %86 = const 8 : u64i
        %87 = mul %85, %86 : u64i
        %88 = const 5 : u64i
        %89 = sub %87, %88 : u64i
        %90 = shift left %84, %89 : u128i
        %91 = cmp ne %83, %90 : bool
        if %91 {
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %61 = load %3 : s128i, align 16
        %62 = cast(integral) %61 : u128i
        %63 = const 16 : u64i
        %64 = const 8 : u64i
        %65 = mul %63, %64 : u64i
        %66 = const 2 : u64i
        %67 = div %65, %66 : u64i
        %68 = cast(integral) %67 : s32i
        %69 = call @f3(%62, %68) : u128i [all]
        %70 = const 1 : u128i
        %71 = const 16 : u64i
        %72 = const 8 : u64i
        %73 = mul %71, %72 : u64i
        %74 = const 2 : u64i
        %75 = div %73, %74 : u64i
        %76 = const 1 : u64i
        %77 = sub %75, %76 : u64i
        %78 = shift left %70, %77 : u128i
        %79 = cmp ne %69, %78 : bool
        if %79 {
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %40 = load %3 : s128i, align 16
        %41 = cast(integral) %40 : u128i
        %42 = const 16 : u64i
        %43 = const 8 : u64i
        %44 = mul %42, %43 : u64i
        %45 = const 2 : u64i
        %46 = div %44, %45 : u64i
        %47 = const 2 : u64i
        %48 = add %46, %47 : u64i
        %49 = cast(integral) %48 : s32i
        %50 = call @f3(%41, %49) : u128i [all]
        %51 = const 1 : u128i
        %52 = const 16 : u64i
        %53 = const 8 : u64i
        %54 = mul %52, %53 : u64i
        %55 = const 2 : u64i
        %56 = div %54, %55 : u64i
        %57 = const 3 : u64i
        %58 = sub %56, %57 : u64i
        %59 = shift left %51, %58 : u128i
        %60 = cmp ne %50, %59 : bool
        if %60 {
            call @abort() [all]
            yield
        }
        yield
    }
    %38 = const 0 : s32i
    store %38, %0
    %39 = load %0 : s32i
    return %39
}
